fixed mobile width and text-align

--- a/src/css/info.scss
+++ b/src/css/info.scss
@@ -83,9 +83,15 @@
 }
 
 @media screen and (max-width: $sm - 1) {
+  .container {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
   .about-shop {
     margin-bottom: 1em;
     font-size: 1em;
+    text-align: left;
+    padding: 15px 0;
   }
  
   .info-top-row {
